--- a/boot/src/main/webapp/1.grid/grid.html
+++ b/boot/src/main/webapp/1.grid/grid.html
@@ -7,7 +7,7 @@
     <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
     <title>부트스트랩 101 템플릿</title>
 
-	<!--  부투스트랩 경로 설정 바꿔야 함-->
+	<!--  부투스트랩 경로 설정 바꿔야 함!!!!-->
     <!-- 부트스트랩 -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 	
